Added BaseGameObject from which game objects are inherited. Ship class redesigned, now it is a container for instances of the ShipSection class, which allows you to interact with each section of the ship separately.

--- a/.gitignore
+++ b/.gitignore
@@ -185,7 +185,7 @@ fabric.properties
 *.xlsx
 # Temp python file 
 src/tmp.py
-
-
+# Bat
+*.bat
 # idea folder, uncomment if you don't need it
 .idea
